// account proto file
// protoc --gofast_out=plugins=grpc:. *.proto


syntax = 'proto3';

package account;

// Message service definition for the AccountApi
service AccountApi {
  rpc CreateAcct (CreateAcctRequest) returns (CreateAcctResponse) {}
  rpc ListAcct  (ListAcctRequest) returns (ListAcctResponse) {}
  rpc ShowAcct (ShowAcctRequest) returns (ShowAcctResponse) {}
  rpc DeleteAcct(DeleteAcctRequest) returns (DeleteAcctResponse) {}
  rpc UpdateAcct(UpdateAcctRequest) returns (UpdateAcctResponse) {}
}

// Values that can be changed on an account
message ModAccount {
  string    name         = 1;
  string    token        = 2;
  string    status       = 3;
}

// Request to Create an account
message CreateAcctRequest {
  string    acctname      = 1;
  string    superkey      = 2;
}

// Response for account Create results
message CreateAcctResponse {
  string    status        = 1;
}

// Request to show an account
message ListAcctRequest {
  string    superkey      = 1;
}

// Response for account Show results
message ListAcctResponse {
  string   payload       = 1;
  string   status        = 2;
}

// Request to show an account
message ShowAcctRequest {
  string    acctnum       = 1;
  string    superkey      = 2;
}

// Response for account Show results
message ShowAcctResponse {
  string    payload       = 1;
  string    status        = 2;
}

// Request to Delete account
message DeleteAcctRequest {
  string    acctnum       = 1;
  string    superkey      = 2;
}

// Response for account Delete results
message DeleteAcctResponse {
  string    status        = 1;
}

// Request to Update account's api key
message UpdateAcctRequest {
  string        acctnum       = 1;
  string        superkey      = 2;
  ModAccount    modAcct       = 3;
}

// Response for account Update results
message UpdateAcctResponse {
  string    payload       = 1;
  string    status        = 2;
}
